--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .heroButton{
+        @apply px-6 py-2 border border-[#e0dbd6]/40 rounded-full uppercase text-xs tracking-widest text-gray-400 transition-all hover:border-[#E98074]/40 hover:text-[#787775]
+    }
+}
