--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,4 +6,8 @@
     .heroButton{
         @apply px-6 py-2 border border-[#e0dbd6]/40 rounded-full uppercase text-xs tracking-widest text-gray-400 transition-all hover:border-[#E98074]/40 hover:text-[#787775]
     }
+
+    .contactInput{
+        @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#E85A4F]/60 focus:text-[#E85A4F]/60 hover:border-[#E85A4F]/60
+    }
 }
